COD-99: fix: refined styles for responsiveness, form alignment, and enhanced layout on smaller screens.

--- a/styles.css
+++ b/styles.css
@@ -33,25 +33,31 @@ body {
   width: 50rem;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
   border-radius: 1rem 1rem 12rem 1rem;
   overflow: hidden;
-}
-
-hr {
-  border: 0.0125rem solid var(--light-grey);
-  width: 100%;
+  position: relative;
+  z-index: 1;
 }
 
 #form-btn {
   background-color: var(--purple);
-  width: 7rem;
+  width: 6rem;
   height: 6rem;
-  z-index: 1;
-  align-self: flex-end;
   border: none;
-  border-radius: 3.5rem;
+  border-radius: 50%;
   cursor: pointer;
+  align-self: flex-end;
+}
+
+#form-btn::before {
+  content: '';
+  position: absolute;
+  width: calc(100% - 6rem);
+  margin-top: 1.25rem;
+  left: 3rem;
+  height: 0.125rem;
+  background-color: var(--light-grey);
+  z-index: -1;
 }
 
 #form-btn:hover {
@@ -60,12 +66,7 @@ hr {
 }
 
 #form-btn > img {
-  width: 3rem;
-}
-
-.btn-wrapper {
-  display: flex;
-  align-items: center;
+  width: 2.5rem;
 }
 
 .display-date {
@@ -81,12 +82,12 @@ hr {
 
 .date {
   color: var(--purple);
+  margin: 0;
+  padding: 0;
 }
 
 form {
   display: flex;
-  justify-content: flex-start;
-  width: 80%;
   gap: 1rem 2rem;
 }
 
@@ -99,7 +100,7 @@ input {
   border-radius: 0.5rem;
   font-weight: bolder;
   font-size: 2rem;
-  text-align: left;
+  cursor: pointer;
 }
 
 input:focus {
@@ -135,30 +136,40 @@ input.error {
 .required-message {
   color: var(--light-red);
   font-style: italic;
+  padding-top: 0.625rem;
 }
 
 @media only screen and (max-width: 600px) {
   .card {
     max-width: 90%;
-    padding: 1.5rem;
-  }
-
-  .btn-wrapper {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    padding: 3rem 1.25rem;
+    border-radius: 1rem 1rem 6rem 1rem;
+    overflow: hidden;
+    gap: 2rem;
   }
 
   #form-btn {
-    width: 5rem;
-    height: 5rem;
-    margin-top: -2.5rem;
+    width: 4rem;
+    height: 4rem;
     align-self: center;
+  }
+
+  #form-btn > img {
+    width: 1.75rem;
+  }
+
+  #form-btn::before {
+    width: calc(100% - 3.5rem);
+    left: 1.25rem;
+    height: 0.125rem;
+    background-color: var(--light-grey);
+    z-index: -1;
+    margin-top: 1rem;
   }
 
   .display-date > p {
     font-size: 3rem;
-    margin-bottom: 0.25rem;
+    margin-bottom: -1rem;
   }
 
   label {
@@ -166,14 +177,20 @@ input.error {
   }
 
   input {
-    width: 5.25rem;
-    height: 1.5rem;
+    width: 5.75rem;
     font-size: 1.5rem;
   }
 
   form {
-    gap: 1rem;
-    padding: 0;
-    margin-bottom: 4.5rem;
+    justify-content: space-between;
+    gap: 0.5rem;
+  }
+
+  input::placeholder {
+    font-size: 1.25rem;
+  }
+
+  .display-date {
+    margin-bottom: 0;
   }
 }
